--- a/Coding challenge #3/index.html
+++ b/Coding challenge #3/index.html
@@ -8,8 +8,8 @@
   <body style="background-color: #eee">
     <div class="app">
       <h1 style="text-align: center; font-size: 80px; font-weight: bold">
-        Challenge 1 <br />
-        Check Conosle...
+        Challenge 3 <br />
+        Check Conosle ... Movements Exercise
       </h1>
     </div>
     <script src="./script.js"></script>
